syntax = "proto3";

package test;

service TestService {
  rpc getBidi (stream Request) returns (stream Empty) {}
  rpc getStream (Request) returns (stream Empty) {}
  rpc getUnary (Request) returns (Empty) {}
}

message Request {
  string first = 1;
  int32 second = 2;
}

message Empty {
}
